# Email-Intent-classification

./: .gitignore  README.md  app.py  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
archives/: data.ipynb  train_single_label.py
src/: inference.py  models.py  train.py
src/constants/: label_map.json
src/data/: data.csv  data.json  intent_1.csv  test.json
src/templates/: index.html
