[project]
name = "email-intent-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0",
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
    "transformers>=4.52.3",
    "uvicorn[standard]>=0.34.2",
]
